--- a/.config/i3/config
+++ b/.config/i3/config
@@ -161,7 +161,7 @@ bar {
 	id top-bar
 	position top
 
-        status_command bumblebee-status -m spotify nic disk:root cpu memory time date pasink pasource dnf -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" -t solarized-powerline
+        status_command bumblebee-status -m spotify nic disk:root cpu memory time date pasink pasource github -p root.path=/ time.format="%H:%M CW %V" date.format="%a, %b %d %Y" -t solarized-powerline
 	
 	colors {
 		#colors			border	backgr.	text
