--- a/src/.config/polybar/config
+++ b/src/.config/polybar/config
@@ -19,9 +19,8 @@ warning = #a0ae00
 alert = #ca3f3f
 info = #0776aa
 
-[bar/main]
+[global/barconfig]
 enable-ipc = true
-;monitor = ${env:MONITOR:LVDS-1}
 width = 100%
 height = 30
 offset-x = 0
@@ -48,13 +47,26 @@ font-0 = Open Sans Regular:size=10;2
 ;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ;font-2 = siji:pixelsize=10;1
 font-1 = FontAwesome:style=Regular:size=10;2
+font-2 = Font Awesome 5 Brands:style=Regular:size=10;2
 
-modules-left = i3 filesystem memory cpu
+modules-left = i3 filesystem memory cpu docker-status
 modules-center = xwindow
 modules-right = bspwm backlight-acpi battery volume eth wlan date
 
-tray-position = right
 tray-padding = 2
+
+[bar/main]
+inherit = global/barconfig
+monitor = ${env:MONITOR_PRIMARY:LVDS-1}
+
+tray-position = right
+
+[bar/secondary]
+inherit = global/barconfig
+monitor = ${env:MONITOR_SECONDARY:}
+
+tray-position = 
+
 ;tray-transparent = true
 ;tray-background = #0063ff
 
@@ -126,7 +138,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
@@ -378,5 +390,11 @@ empty-notifications=true
 interval=10
 label-active-font = 3
 label = %{F#fff}%{F-}  %notifications%
+
+[module/docker-status]
+type=custom/script
+exec=~/bin/docker-status
+interval=2
+label= %output%
 
 ; vim:ft=dosini
