--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -176,8 +176,8 @@ bindsym $mod+r mode "resize"
 #}
 
 # Extra Stuff
-# exec --no-startup-id polybar main &
 exec --no-startup-id compton -b
+exec --no-startup-id /home/rik/bin/startup.sh
 
 # colors		border	backgr.	text	indicator
 client.focused		#1b1918 #1b1918 #eee8d5 #ababab
