--- a/src/desktop-rik/.config/polybar/config
+++ b/src/desktop-rik/.config/polybar/config
@@ -232,7 +232,7 @@ format-underline = #0a6cf5
 label = %date% %time%
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
 format-volume = <ramp-volume> <label-volume>
 label-muted =  muted
