--- a/src/.config/gtk-2.0/gtkfilechooser.ini
+++ b/src/.config/gtk-2.0/gtkfilechooser.ini
@@ -6,6 +6,6 @@ GeometryX=0
 GeometryY=0
 GeometryWidth=840
 GeometryHeight=783
-SortColumn=modified
+SortColumn=name
 SortOrder=ascending
 StartupMode=recent
