--- a/src/desktop-rik/.config/polybar/config
+++ b/src/desktop-rik/.config/polybar/config
@@ -48,7 +48,7 @@ font-0 = Open Sans Regular:size=10;2
 ;font-2 = siji:pixelsize=10;1
 font-1 = FontAwesome:style=Regular:size=10;2
 font-2 = Font Awesome 5 Brands:style=Regular:size=10;2
-font-3 = Font Awseome 5 Solid:style=Regular:size=10;2
+font-3 = Font Awesome 5 Free:style=Solid:size=10;2
 
 modules-left = i3 filesystem memory cpu docker-status
 modules-center = xwindow
