--- a/src/.config/gtk-2.0/gtkfilechooser.ini
+++ b/src/.config/gtk-2.0/gtkfilechooser.ini
@@ -2,10 +2,10 @@
 LocationMode=filename-entry
 ShowHidden=true
 ShowSizeColumn=true
-GeometryX=0
-GeometryY=0
+GeometryX=2780
+GeometryY=163
 GeometryWidth=840
 GeometryHeight=783
 SortColumn=name
-SortOrder=ascending
+SortOrder=descending
 StartupMode=recent
