--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -126,6 +126,11 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# move workspace to other screen
+bindsym $mod+Control+Right move workspace to output right
+bindsym $mod+Control+Left move workspace to output left
+
+# take a screenshot
 bindsym Print exec "maim -s | xclip -selection clipboard -t image/png"
 
 # reload the configuration file
