--- a/src/.config/polybar/config
+++ b/src/.config/polybar/config
@@ -49,6 +49,7 @@ font-0 = Open Sans Regular:size=10;2
 font-1 = FontAwesome:style=Regular:size=10;2
 font-2 = Font Awesome 5 Brands:style=Regular:size=10;2
 font-3 = Font Awesome 5 Free:style=Solid:size=10;2
+font-4 = Material Design Icons:style=Regular:size=12;2
 
 modules-left = i3 filesystem memory cpu docker-status
 modules-center = xwindow
@@ -239,18 +240,18 @@ type = internal/network
 interface = wlp3s0
 interval = 3.0
 
-format-connected =  <label-connected>
+format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
 label-connected = %essid%
 label-disconnected = No wifi
 
-format-disconnected = %{F#ca3f3f}%{F-} <label-disconnected>
+format-disconnected = %{F#ca3f3f}來%{F-} <label-disconnected>
 
-;ramp-signal-0 = 
-;ramp-signal-1 = 
-;ramp-signal-2 = 
-;ramp-signal-3 = 
-;ramp-signal-4 = 
+ramp-signal-0 = 冷 
+ramp-signal-1 = 爛
+ramp-signal-2 = 嵐
+ramp-signal-3 = 襤
+ramp-signal-4 = 蠟
 
 [module/eth]
 type = internal/network
@@ -285,12 +286,12 @@ label = %date% %time%
 [module/volume]
 type = internal/volume
 
-format-volume = <ramp-volume> <label-volume>
-label-muted =  muted
+format-volume = %{T5}<ramp-volume>%{T-} <label-volume>
+label-muted = %{T5}%{T-} muted
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 ;bar-volume-width = 10
 ;bar-volume-foreground-0 = #55aa55
