--- a/src/desktop-rik/.config/polybar/config
+++ b/src/desktop-rik/.config/polybar/config
@@ -43,7 +43,7 @@ padding-right = 4
 module-margin-left = 3
 module-margin-right = 2
 
-font-0 = Open Sans Regular:size=10;2
+font-0 = Roboto:style=Regular:size=10;2
 ;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ;font-2 = siji:pixelsize=10;1
 font-1 = FontAwesome:style=Regular:size=10;2
@@ -120,18 +120,18 @@ type = internal/bspwm
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-padding = 4
 
 label-occupied = %index%
-label-occupied-padding = 2
+label-occupied-padding = 4
 
 label-urgent = %index%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 4
 
 label-empty = %index%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 4
 
 [module/i3]
 type = internal/i3
@@ -149,7 +149,8 @@ label-mode-background = ${colors.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${module/bspwm.label-focused-background}
+;label-focused-background = ${module/bspwm.label-focused-background}
+label-focused-background = #0D3E58
 label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 
