--- a/src/.config/polybar/config
+++ b/src/.config/polybar/config
@@ -43,7 +43,7 @@ padding-right = 4
 module-margin-left = 3
 module-margin-right = 2
 
-font-0 = Open Sans Regular:size=10;2
+font-0 = Roboto:style=Regular:size=10;2
 ;font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ;font-2 = siji:pixelsize=10;1
 font-1 = FontAwesome:style=Regular:size=10;2
