--- a/src/desktop-rik/.config/polybar/config
+++ b/src/desktop-rik/.config/polybar/config
@@ -212,12 +212,12 @@ interval = 3.0
 
 format-connected-underline = #55aa55
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.success}
+format-connected-prefix-foreground = ${colors.primary}
 label-connected = %local_ip%
 
 format-disconnected-prefix = " "
-format-disconnected-prefix-foreground = ${colors.alert}
-format-disconnected = No uplink
+format-disconnected-prefix-foreground = ${colors.primary}
+format-disconnected = 
 
 [module/date]
 type = internal/date
