--- a/src/.config/compton.conf
+++ b/src/.config/compton.conf
@@ -8,7 +8,7 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "glx";
+backend = "xrender";
 
 #################################
 #
@@ -124,10 +124,8 @@ alpha-step = 0.06;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-blur-background = true;
-
-blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
-
+#blur-background = true;
+#blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
 
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
