--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -51,7 +51,7 @@ bindsym $mod+Shift+q kill
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 #bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+d exec --no-startup-id rofi -show
+#bindsym $mod+d exec --no-startup-id rofi -show
 
 # change focus
 bindsym $mod+j focus left
