--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -18,6 +18,7 @@ new_window none
 set $mod Mod4
 
 for_window [class=".*"] title_format " %title"
+for_window [title="win0" class="java-lang-Thread" class="jetbrains-*"] floating enable # PhpStorm splash screen
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
