Fix desktop settings

--- a/src/.config/compton.conf
+++ b/src/.config/compton.conf
@@ -233,4 +233,8 @@ wintypes:
         # focus: Whether to always consider windows of this type focused.
         focus = true;
     };
+    utility =
+    {
+        shadow = false;
+    };
 };
