Change setup for new pc

--- a/src/.config/polybar/config
+++ b/src/.config/polybar/config
@@ -4,8 +4,8 @@
 ; Local settings for specific setup
 ; Will be used in the global bar config file
 [local-settings]
-eth-interface = enp4s0
-wlan-interface = wlp3s0
+eth-interface = null
+wlan-interface = wlo1
 battery-id = BAT0
 adapter-id = AC
 
