--- a/src/.config/picom.conf
+++ b/src/.config/picom.conf
@@ -8,7 +8,7 @@
 
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
-backend = "xrender";
+backend = "glx";
 
 #################################
 #
@@ -48,9 +48,7 @@ glx-copy-from-front = false;
 # Partially breaks --resize-damage.
 # Defaults to undefined.
 
-
-#######glx-swap-method = "undefined";
-glx-swap-method="-1"
+#use-damage = true
 
 #################################
 #
@@ -60,10 +58,6 @@ glx-swap-method="-1"
 
 # Enabled client-side shadows on windows.
 shadow = true;
-# Don't draw shadows on DND windows.
-no-dnd-shadow = true;
-# Avoid drawing shadows on dock/panel windows.
-no-dock-shadow = false;
 
 # The blur radius for shadows. (default 12)
 shadow-radius = 5;
@@ -112,25 +106,23 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 1;
 inactive-opacity = 1;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-#blur-background = true;
+blur-background = false;
 #blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
 
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+#blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
+#blur-background-fixed = true;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'"
